# hpc-learning

./: .gitignore  CMakeLists.txt  README.md  steve_face_texture.ppm
bench/: aos_vs_soa.cpp
bench/results/: Aos_vs_SoA(week5).csv  vec_layout(week1).csv
docs/week1/: objective.md  vector memory.md
docs/week2/: MVP pipeline.md  matrix math library.md  matrix stability.md  objective.md
docs/week3/: camera,projection and clipping.md
docs/week4_week5/: Aos_vs_SoA.md
examples/: cube.cpp  scene_project.cpp
include/math/: camera.h  mat4.h  vec.h
src/: main.cpp
tests/: test_mat4_inverse.cpp  test_vec.cpp
tests/week 1/tests/: test_vec.cpp
week 1/: CMakeLists.txt  CMakeSettings.json  README.md
week 1/bench/: aos_vs_soa.cpp
week 1/bench/docs/: vec_memory.md
week 1/include/math/: vec.h
week 1/src/: main.cpp
week 2/: CMakeLists.txt  CMakeSettings.json  README.md
week 2/docs/: GPU Matrix Representation.md  The MVP Pipeline.md  matrix_stability.md
week 2/examples/cube/: cube.cpp
week 2/include/math/: mat4.h
week 2/tests/: test_mat4_inverse.cpp
